--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Custom Travel App",
   "main": "index.js",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -11,6 +12,7 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
@@ -20,21 +22,25 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.5.2",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "supertest": "^5.0.0",
     "terser-webpack-plugin": "^4.2.2",
     "url-loader": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server/server.js",
+    "test": "jest",
+    "start": "node ./src/server/app.js",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build": "webpack --config webpack.prod.js"
   },
